--- a/style.css
+++ b/style.css
@@ -232,16 +232,16 @@ textarea {
   }
 }
 
-@media only screen and (min-width: 456px) and (max-width: 958px) {
+/* @media only screen and (min-width: 456px) and (max-width: 958px) {
   input {
     width: 100% !important;
   }
-}
-
-@media only screen and (min-width: 959px) {
+} */
+@media and all (min-width: 959px) {
   .error-box {
     width: 70%;
   }
+
   .field {
     margin: 2% auto;
     width: 60%;
