--- a/style.css
+++ b/style.css
@@ -53,6 +53,8 @@ fieldset {
   align-content: center;
   margin: 2% auto;
   vertical-align: center;
+  font-size: larger;
+  font-family: 'Fredericka the Great', cursive, serif;
 }
 .cancel-btn,
 .submit-btn {
@@ -93,6 +95,15 @@ fieldset {
 .btn {
   cursor: pointer;
 }
+.block {
+  display: block;
+  width: 100%;
+  height: 100%;
+  border: none;
+  font-size: larger;
+  font-family: 'Fredericka the Great', cursive, serif;
+  background-color: #c3976a;
+}
 ul {
   list-style: none;
   border: 1px solid black;
@@ -119,13 +130,15 @@ a {
 }
 
 .button-delete {
-  color: black;
+  color: white;
   background-color: #c04000;
   font-weight: bold;
   padding: 2%;
   margin: 3% auto;
   text-align: center;
   width: 80%;
+  font-size: larger;
+  font-family: 'Fredericka the Great', cursive, serif;
 }
 
 .visit-site {
@@ -232,27 +245,20 @@ textarea {
   }
 }
 
-/* @media only screen and (min-width: 456px) and (max-width: 958px) {
+@media only screen and (min-width: 456px) and (max-width: 958px) {
   input {
     width: 100% !important;
   }
-} */
-@media and all (min-width: 959px) {
+}
+@media only screen and (min-width: 959px) {
   .error-box {
     width: 70%;
   }
-
   .field {
     margin: 2% auto;
     width: 60%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-  }
-}
-
-@media only screen and (min-width: 1025px) {
-  .hidden-large {
-    display: none !important;
   }
 }
